syntax = "proto3";

package syft.core.adp;
import "proto/core/common/common_object.proto";

message DataSubject {
  string name = 1;
}

message DataSubjectGroup {
  syft.core.common.UID id = 1;
  repeated DataSubject data_subjects = 2;
}
