syntax = "proto3";

package syft.core.adp;
import "proto/core/adp/entity.proto";
import "proto/lib/numpy/array.proto";
import "proto/core/adp/scalar_manager.proto";

message SingleEntityPhiTensor {
  bytes child = 1;
  syft.lib.numpy.NumpyProto min_vals = 2;
  syft.lib.numpy.NumpyProto max_vals = 3;
  syft.core.adp.Entity entity = 4;
  VirtualMachinePrivateScalarManager scalar_manager = 5;
}

message RowEntityPhiTensor {
  uint32 serde_concurrency = 1;
  repeated bytes rows = 2;
  repeated syft.core.adp.Entity unique_entities = 3;
  repeated VirtualMachinePrivateScalarManager unique_scalar_managers = 4;
  syft.lib.numpy.NumpyProto row_entity_index = 5;
  syft.lib.numpy.NumpyProto row_scalar_manager_index = 6;
}
